gred: update README

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -36,8 +36,6 @@ class GPlane{
 INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2 (так, что разность двух
 координат всегда укладывается в тип int).
 
-TODO: протестировать SimpleViewer на небольших значениях  GCoordMin/GCoordMax!
-
 В том же файле gplane.h описаны несколько простых растровых плоскостей
 для тестовых целей:
 
@@ -56,7 +54,7 @@ TODO: протестировать SimpleViewer на небольших знач
 
 * GPlaneTestGridSlow -- то же, но с задержкой.
 
-TODO: класс "плоскость, содержащая объекты"
+TODO: класс "плоскость с объектами", "плоскость со слоями"
 
 ===========================================================================
     2. Вьюеры графической плоскости (SimpleViewer, MThreadViewer, DThreadViewer)
@@ -95,8 +93,10 @@ GPlane * pl = get_fast_plane(); // получить ссылку на быстр
 В файле dthread_viewer.h на основе простого вьюера описан двухпотоковый
 вьюер с квадратными плитками.
 
+TODO: функции reset()!
+
 ===========================================================================
-    4. Вьюер с резиной (RubberViewer<ViewerType>)
+    4. Вьюер с резиной (RubberViewer<ViewerT>)
 
 В файле rubber_viewer.h описан класс, добавляющий к любому вьюеру резину.
 
@@ -109,14 +109,27 @@ GPlane * pl = get_fast_plane(); // получить ссылку на быстр
 Для этого переопределены функции draw_image (оборачивается функция из viewer) и 
 on_motion_notify_event.
 
+При движениях мыши перерисовываются только привязанные к мыши линии (параметр all
+у функций rubber_draw и rubber_erase)
+
 RubberViewer<MyViewer> V(plane); // создать вьюер с резиной на основе MyViewer
 V.rubber_add(pt1,r1,pt2,r2);     // добавить сегмент резиновой линии
 V.rubber_add(x1,y1,r1,x2,y2,r2); // или так
 V.rubber_clear();                // очистить всю резину
 
+V.rubber_add_src_sq(p,size); // нарисовать квадратик 2size x 2size в точке плоскости p
+V.rubber_add_dst_sq(size);   // нарисовать квадратик 2size x 2size привязанный к мыши
+V.rubber_add_diag(p);        // линия от точки p до мыши
+V.rubber_add_rect(p);        // прямоугольник от точки p до мыши
+
+===========================================================================
+    5. Вьюер с действиями (ActionViewer<ViewerT>)
+
+В файле action_viewer.h описан класс, добавляющий к любому вьюеру действия.
+
 ===========================================================================
 
-    5. Графический объект (GObject) -- TODO
+    6. Графический объект (GObject) -- TODO
 
 Объект, умеющий нарисоваться на растровой картинке.
 
