mapsoft_convert: add shift_maps option

--- a/programs/mapsoft_convert.1
+++ b/programs/mapsoft_convert.1
@@ -18,6 +18,9 @@ Skip some types of data (see below)
 .TP 
 \fB\-\-rescale_maps <factor>\fR
 Rescale map references
+.TP 
+\fB\-\-shift_maps <x>,<y>\fR
+Shift map references
 .SH "INPUT FILES"
 .TP 
 mapsoft XML\-like format
