gred: join rubber segment reference flags into one value

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -104,9 +104,23 @@ TODO: функции reset()!
 
 В файле rubber_viewer.h описан класс, добавляющий к любому вьюеру резину.
 
-Резиновая линия - это пара точек и пара флагов привязки (первый бит
-флага привязки показывает, привязана ли к мыши координата x, второй -
-привязана ли к мыши координата y).
+Резиновая линия - это пара точек и флаги привязки
+
+флаги привязки:
+бит 1 - координата X точки 1 привязана к мыши
+бит 2 - координата Y точки 1 привязана к мыши
+бит 3 - координата X точки 1 привязана к мыши
+бит 4 - координата Y точки 1 привязана к мыши
+
+Маски:
+RUBBFL_PLANE     -- обе точки привязаны к плоскости
+RUBBFL_MOUSE     -- обе точки привязаны к мыши
+RUBBFL_MOUSE_P1  -- точка 1 привязана к мыши
+RUBBFL_MOUSE_P2  -- точка 2 привязана к мыши
+RUBBFL_MOUSE_P1X -- координата X точки 1 привязана к мыши
+RUBBFL_MOUSE_P1Y -- координата Y точки 1 привязана к мыши
+RUBBFL_MOUSE_P2X -- координата X точки 2 привязана к мыши
+RUBBFL_MOUSE_P2Y -- координата Y точки 2 привязана к мыши
 
 Класс RubberViewer определяет функции рисования и убирания резины.
 Резина убирается перед движением мыши и перед рисованием данных и рисуется после.
@@ -114,8 +128,8 @@ TODO: функции reset()!
 on_motion_notify_event.
 
 RubberViewer<MyViewer> V(plane); // создать вьюер с резиной на основе MyViewer
-V.rubber_add(pt1,r1,pt2,r2);     // добавить сегмент резиновой линии
-V.rubber_add(x1,y1,r1,x2,y2,r2); // или так
+V.rubber_add(pt1,pt2,flags);     // добавить сегмент резиновой линии
+V.rubber_add(x1,y1,x2,y2,flags); // или так
 V.rubber_clear();                // очистить всю резину
 
 Здесь pt1 и pt2 -- координаты концов, а r1 и r2 -- флаги привязки
