gred: allow ellipses in rubber

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -111,6 +111,7 @@ TODO: функции reset()!
 бит 2 - координата Y точки 1 привязана к мыши
 бит 3 - координата X точки 1 привязана к мыши
 бит 4 - координата Y точки 1 привязана к мыши
+бит 5 - сегмент является эллипсом
 
 Маски:
 RUBBFL_PLANE     -- обе точки привязаны к плоскости
@@ -121,6 +122,7 @@ RUBBFL_MOUSE_P1X -- координата X точки 1 привязана к м
 RUBBFL_MOUSE_P1Y -- координата Y точки 1 привязана к мыши
 RUBBFL_MOUSE_P2X -- координата X точки 2 привязана к мыши
 RUBBFL_MOUSE_P2Y -- координата Y точки 2 привязана к мыши
+RUBBFL_ELL       -- сегмент является эллипсом
 
 Класс RubberViewer определяет функции рисования и убирания резины.
 Резина убирается перед движением мыши и перед рисованием данных и рисуется после.
@@ -138,6 +140,7 @@ V.rubber_add_src_sq(p,size); // нарисовать квадратик 2size x 
 V.rubber_add_dst_sq(size);   // нарисовать квадратик 2size x 2size привязанный к мыши
 V.rubber_add_diag(p);        // линия от точки p до мыши
 V.rubber_add_rect(p);        // прямоугольник от точки p до мыши
+V.rubber_add_ellipse(p);     // эллипс, вписанный в прямоугольник от точки p до мыши
 
 ===========================================================================
     5. Вьюер с действиями (ActionViewer<ViewerT>)
