gred: rename GPlane to GObj

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -21,16 +21,17 @@
 извлечены из их кэша.
 
 ===========================================================================
-    1. Графическая плоскость (GPlane)
+    1. Графический объект (GObj)
 
-Интерфейс описан в файле gplane.h:
+Интерфейс описан в файле gobj.h:
 
 class GPlane{
   public:
   virtual iImage draw(const iRect &range) const = 0;
+  virtual iRect range(void);
 };
 
-Плоскость может отдать картинку на любой диапазон. Координаты плоскости
+Объект может отдать картинку на любой диапазон. Координаты
 имеют тип int. Считается, что координаты лежат в диапазоне
 INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2 (так, что разность двух
 координат всегда укладывается в тип int).
@@ -38,20 +39,20 @@ INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2 (так, что разнос
 В том же файле gplane.h описаны несколько простых растровых плоскостей
 для тестовых целей:
 
-* GPlaneSolidFill -- отдает картинку, равномерно закрашенную
+* GObjSolidFill -- отдает картинку, равномерно закрашенную
   определенным цветом. Используется по умолчанию в многопотоковых вьюерах
   в качестве "быстрой" плоскости.
 
-* GPlaneTestTile  -- отдает область, закрашенную сине-зеленым
+* GObjTestTile  -- отдает область, закрашенную сине-зеленым
   градиентом. Удобна для тестирования вьюеров, позволяет видеть, какими
   именно кусками рисуется плоскость.
 
-* GPlaneTestTileSlow -- то же, но с задержкой, пропорциональной размеру
+* GObjTestTileSlow -- то же, но с задержкой, пропорциональной размеру
   запрошенной области.
 
-* GPlaneTestGrid --  рисует сетку с шагом степени 2.
+* GObjTestGrid --  рисует сетку с шагом степени 2.
 
-* GPlaneTestGridSlow -- то же, но с задержкой.
+* GObjTestGridSlow -- то же, но с задержкой.
 
 TODO: класс "плоскость с объектами", "плоскость со слоями"
 
@@ -66,7 +67,7 @@ TODO: класс "плоскость с объектами", "плоскость
 SimpleViewer V(plane);       // простой вьюер
 iPoint pt = V.get_origin();  // получить положение окна
 V.set_origin(pt);            // установить новое положение окна
-GPlane * pl = V.get_plane(); // получить ссылку на растровую плоскость
+GObj * pl = V.get_plane(); // получить ссылку на растровую плоскость
 V.set_plane(pl);             // заменить ссылку на растровую плоскость
 
 TODO: функция reset(). И применить ее в set_plane.
@@ -80,7 +81,7 @@ TODO: функция reset(). И применить ее в set_plane.
 MThreadViewer V(plane);
 V.set_fast_plane();             // установить "быструю" плоскость по умолчанию 
 V.set_fast_plane(pl);           // установить "быструю" плоскость 
-GPlane * pl = get_fast_plane(); // получить ссылку на быструю плоскость
+GObj * pl = get_fast_plane(); // получить ссылку на быструю плоскость
 
 Недостатки MThreadViewer:
 
@@ -95,7 +96,7 @@ GPlane * pl = get_fast_plane(); // получить ссылку на быстр
 DThreadViewer V(plane);
 V.set_fast_plane();             // установить "быструю" плоскость по умолчанию 
 V.set_fast_plane(pl);           // установить "быструю" плоскость 
-GPlane * pl = get_fast_plane(); // получить ссылку на быструю плоскость
+GObj * pl = get_fast_plane(); // получить ссылку на быструю плоскость
 
 TODO: функции reset()!
 
@@ -172,9 +173,9 @@ V.action_select(int a);   // прервать текущее действие и
 Получает картинку, ее координаты на растровой плоскости,
 и информацию о привязки и масштабе растровой плоскости.
 Рисует что-то на картинке. Что-то в таком духе:
-int GObject::draw(GImage & img, const GPoint & origin, const GPlaneInfo & info);
+int GObject::draw(GImage & img, const GPoint & origin, const GObjInfo & info);
 
-GPlaneInfo -- информация о привязке и масштабе. Объект может использовать или
+GObjInfo -- информация о привязке и масштабе. Объект может использовать или
 не использовать ее по своему усмотрению.
 (jpeg-картинка может эффективно грузиться с уменьшением,
 иконка может вообще игнорировать масштаб/привязку...)
