experimental/gred: fix readme

--- a/experimental/gred/README
+++ b/experimental/gred/README
@@ -23,9 +23,9 @@
 ===========================================================================
     1. Графический объект (GObj)
 
-Интерфейс описан в файле gobj.h:
+Интерфейс описан в файле iface/gobj.h:
 
-class GPlane{
+class GObj{
   public:
   virtual iImage draw(const iRect &range) const = 0;
   virtual iRect range(void);
@@ -33,11 +33,11 @@ class GPlane{
 
 Объект может отдать картинку на любой диапазон. Координаты
 имеют тип int. Считается, что координаты лежат в диапазоне
-INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2 (так, что разность двух
-координат всегда укладывается в тип int).
+INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2
+(так что разность двух координат всегда укладывается в тип int).
 
-В том же файле gplane.h описаны несколько простых растровых плоскостей
-для тестовых целей:
+В качестве примера описано несколько простых объектов для закрашивания
+всей плоскости:
 
 * GObjSolidFill -- отдает картинку, равномерно закрашенную
   определенным цветом. Используется по умолчанию в многопотоковых вьюерах
