--- a/core/gred/README
+++ b/core/gred/README
@@ -3,8 +3,8 @@
 ===========================================================================
 
 Мы хотим работать со множеством разнородных графических объектов, каждый
-из которых может быть как-то нарисован на растровой плоскости. Объекты
-распределены по глубинам, способ рисования объекта определяется его
+из которых может быть как-то нарисован на растровой плоскости. (Объекты
+распределены по глубинам), способ рисования объекта определяется его
 классом. Масштаб и геодезическая привязка плоскости является некоторой
 дополнительной информацией, которую некоторые объекты могут
 использовать.
@@ -21,130 +21,214 @@
 извлечены из их кэша.
 
 ===========================================================================
-    1. Графический объект (GObj)
+    1. Графический объект  -- GObj -- <iface/gobj.h>
 
-Интерфейс описан в файле iface/gobj.h:
+Абстрактный интерфейс графического объекта. Единственный неопределенный метод:
 
-class GObj{
-  public:
-  virtual iImage draw(const iRect &range) const = 0;
-  virtual iRect range(void);
-};
+    int draw(iImage &img, const iPoint &origin);
 
-Объект может отдать картинку на любой диапазон. Координаты
-имеют тип int. Считается, что координаты лежат в диапазоне
-INT_MIN/2 <= GCoordMin < x < GCoordMax <= INT_MAX/2
-(так что разность двух координат всегда укладывается в тип int).
+-- рисование на картинке img со смещением origin. Должен возвращать
+одно из следующих значений:
+GOBJ_FILL_NONE  -- ничего не было нариовано
+GOBJ_FILL_PART  -- что-то было нарисовано
+GOBJ_FILL_ALL   -- все изображение было зарисовано непрозрачным цветом
 
-В качестве примера описано несколько простых объектов для закрашивания
-всей плоскости:
+    iRect range(void) const;
 
-* GObjSolidFill -- отдает картинку, равномерно закрашенную
-  определенным цветом. Используется по умолчанию в многопотоковых вьюерах
-  в качестве "быстрой" плоскости.
+-- метод должен возвращать диапазон координат объекта. По умолчанию
+возвращается значение GOBJ_MAX_RANGE, соответствующее диапазону координат
+INT_MIN/2 ... INT_MAX/2. (Такой диапазон выбран, чтобы разность двух
+координат всегда укладывается в тип int).
 
-* GObjTestTile  -- отдает область, закрашенную сине-зеленым
-  градиентом. Удобна для тестирования вьюеров, позволяет видеть, какими
-  именно кусками рисуется плоскость.
+    void set_scale(const double k);
 
-* GObjTestTileSlow -- то же, но с задержкой, пропорциональной размеру
-  запрошенной области.
+-- метод, вызывается при установке масштаба k. По умолчанию не делает ничего.
 
-* GObjTestGrid --  рисует сетку с шагом степени 2.
+    void set_conv(const Conv & cnv);
 
-* GObjTestGridSlow -- то же, но с задержкой.
+-- метод, вызывается при установке преобразования. По умолчанию не делает
+ничего. Пока не используется!
 
-TODO: класс "плоскость с объектами", "плоскость со слоями"
+  bool is_gray();
+  void gray_on();
+  void gray_off();
+
+-- методы для работы с "серым режимом". В этом режиме объект должен рисовать
+только серые контуры.
 
 ===========================================================================
-    2. Вьюеры графической плоскости (SimpleViewer, MThreadViewer, DThreadViewer)
 
-В файле simple_viewer.h описан простейший GTK-вьюер графической плоскости.
-Он позволяет таскать плоскость по экрану, удерживая левую кнопку мыши.
-По expose_event необходимые части плоскости перерисовываются.
-Этот вьюер подходит только для быстро рисующихся плоскостей.
+    1.1. Примеры графических объектов
 
-SimpleViewer V(plane);       // простой вьюер
-iPoint pt = V.get_origin();  // получить положение окна
-V.set_origin(pt);            // установить новое положение окна
-GObj * pl = V.get_plane(); // получить ссылку на растровую плоскость
-V.set_plane(pl);             // заменить ссылку на растровую плоскость
+GObjSolidFill
+GObjTestGrid
+GObjTestTile
+GObjLine
+Workplane    -- из старого вьюера
 
-TODO: функция reset(). И применить ее в set_plane.
+===========================================================================
 
-В файле mthread_viewer.h на основе простого вьюера описан многопотоковый
-вьюер, удобный для медленных плоскостей. По expose_event сразу рисуется
-"быстрая" плоскость (по умолчанию - равномерно-черная), кроме того
-запускается отдельный поток, готовящий картинку из "медленной"
-плоскости. По мере готовности, картинка дорисовывается.
+    2. Вьюеры
 
-MThreadViewer V(plane);
-V.set_fast_plane();             // установить "быструю" плоскость по умолчанию 
-V.set_fast_plane(pl);           // установить "быструю" плоскость 
-GObj * pl = get_fast_plane(); // получить ссылку на быструю плоскость
+===========================================================================
+    2.1 Viewer -- <iface/Viewer.h>
+
+Интерфейс для использования в rubber и action_manager...
+Можно бы и удалить, пока у нас нет вьюеров, основанных не на SimpleViewer.
+
+===========================================================================
+
+    2.2. SimpleViewer (simple_viewer.h)
+
+Простейший GTK-вьюер графического объекта. Позволяет таскать объект по
+экрану, перемасштабировать его... По expose_event необходимые части объекта
+перерисовываются. Этот вьюер подходит только для быстро рисующихся объектов!
+
+    SimpleViewer V();            // Простой вьюер без объекта
+    SimpleViewer V(&obj);        // Простой вьюер для указанного объекта
+
+    iPoint pt = V.get_origin();  // Получить положение окна
+    V.set_origin(pt);            // Установить новое положение окна
+
+    GObj * o = V.get_obj();      // Получить ссылку на объект
+    V.set_obj(&obj);             // Заменить ссылку на объект
+
+    int c = V.get_bgcolor();     // Получить цвет фона
+    V.set_bgcolor (c);           // Установить цвет фона
+
+    V.redraw();                  // Перерисовать экран
+
+    V.rescale(1.5);              // Увеличить масштаб в 1.5 раза
+    V.set_scale(1.5);            // Установить масштаб 1.5
+    double sc=V.get_scale();     // Получить масштаб
+
+Прочие функции:
+
+Находится ли вьюер в состоянии прокрутки. Используются, например,
+при рисовании "резиновых линий":
+
+    virtual bool is_on_drag();
+
+Управление счетчиком эпохи. Используется в более сложных многопоточных
+вьюерах, чтобы показать второй нити, что ситуация изменилась и нужно
+все перерисовать заново:
+
+    virtual int  get_epoch();
+    virtual void inc_epoch();
+
+Сигналы, испускаемые вьюером до и после каждого рисования на экране.
+
+    sigc::signal<void> & signal_before_draw();
+    sigc::signal<void> & signal_after_draw();
+
+===========================================================================
+
+    2.3. MThreadViewer -- mthread_viewer.h
+
+Многопотоковый вьюер, более удобный для медленных объектов.
+По expose_event нужная область быстро закрашивается фоновым цветом,
+после этого запускается отдельный поток, готовящий картинку из
+"медленного" объекта. По мере готовности картинка дорисовывается.
+
+    MThreadViewer V(&obj);
 
 Недостатки MThreadViewer:
 
-* непонятно, как быстро остановить все потоки при необходимости обновить
-  данные (как сделать reset()).
-* плитки большого размера могут рисоваться долго. Более красиво было бы
-  рисовать все небольшими плитками одинакового размера.
+* плитки большого размера могут рисоваться долго. Красивее рисовать
+  все небольшими плитками одинакового размера раз в секунду
+* не подходит для объектов, которые кэшируют информацию, относящуюся
+  к запрошенным плиткам (а такие объекты мы и собираемся дальше делать)
 
-В файле dthread_viewer.h на основе простого вьюера описан двухпотоковый
-вьюер с квадратными плитками.
-
-DThreadViewer V(plane);
-V.set_fast_plane();             // установить "быструю" плоскость по умолчанию 
-V.set_fast_plane(pl);           // установить "быструю" плоскость 
-GObj * pl = get_fast_plane(); // получить ссылку на быструю плоскость
-
-TODO: функции reset()!
+Тупиковый объект, вряд ли его надо использовать.
 
 ===========================================================================
-    4. Вьюер с резиной (RubberViewer<ViewerT>)
 
-В файле rubber_viewer.h описан класс, добавляющий к любому вьюеру резину.
+    2.3. DThreadViewer -- dthread_viewer.h
 
-Резиновая линия - это пара точек и флаги привязки
+Двухпотоковый вьюер с квадратными плитками.
 
-флаги привязки:
+    DThreadViewer V(&obj);
+
+Методы те же, что и у SimpleViewer.
+
+===========================================================================
+
+    3. Резиновые линии  -- Rubber -- rubber.h
+
+Добавление "резиновых линий" к объекту типа Viewer.
+
+Резиновые линии рисуются поверх всех объектов. Они могут быть
+привязаны к объекту или к мыши.
+
+Сегмент резиновой линии - это пара точек и флаги привязки:
+
+    RubberSegment rs((iPoint)p1, (iPoint)p2, (rubbfl_t)flags);
+
+флаг привязки:
 бит 1 - координата X точки 1 привязана к мыши
 бит 2 - координата Y точки 1 привязана к мыши
 бит 3 - координата X точки 1 привязана к мыши
 бит 4 - координата Y точки 1 привязана к мыши
-бит 5 - сегмент является эллипсом
+биты 5-8 - тип сегмента (отрезок, эллипс, окружность)
+бит 9 - флаг, показывающий, нарисован ли в данный момент сегмент
 
 Маски:
-RUBBFL_PLANE     -- обе точки привязаны к плоскости
-RUBBFL_MOUSE     -- обе точки привязаны к мыши
-RUBBFL_MOUSE_P1  -- точка 1 привязана к мыши
-RUBBFL_MOUSE_P2  -- точка 2 привязана к мыши
-RUBBFL_MOUSE_P1X -- координата X точки 1 привязана к мыши
-RUBBFL_MOUSE_P1Y -- координата Y точки 1 привязана к мыши
-RUBBFL_MOUSE_P2X -- координата X точки 2 привязана к мыши
-RUBBFL_MOUSE_P2Y -- координата Y точки 2 привязана к мыши
-RUBBFL_ELL       -- сегмент является эллипсом
+RUBBFL_PLANE     0x0 -- обе точки привязаны к плоскости
+RUBBFL_MOUSE_P1X 0x1 -- координата X точки 1 привязана к мыши
+RUBBFL_MOUSE_P1Y 0x2 -- координата Y точки 1 привязана к мыши
+RUBBFL_MOUSE_P2X 0x4 -- координата X точки 2 привязана к мыши
+RUBBFL_MOUSE_P2Y 0x8 -- координата Y точки 2 привязана к мыши
+RUBBFL_MOUSE_P1  0x3 -- точка 1 привязана к мыши
+RUBBFL_MOUSE_P2  0xC -- точка 2 привязана к мыши
+RUBBFL_MOUSE     0xF -- обе точки привязаны к мыши
 
-Класс RubberViewer определяет функции рисования и убирания резины.
-Резина убирается перед движением мыши и перед рисованием данных и рисуется после.
-Для этого переопределены функции draw_image (оборачивается функция из viewer) и
-on_motion_notify_event.
+RUBBFL_TYPEMASK  0xF0 -- маска типа сегмента
+RUBBFL_LINE      0x00 -- сегмент является отрезком
+RUBBFL_ELL       0x10 -- эллипс, заданный диагональю описанного прямоугольника
+RUBBFL_ELLC      0x20 -- эллипс, заданный полудиагональю оп. прямоугольника
+RUBBFL_CIRC      0x30 -- окружность, заданная диаметром
+RUBBFL_CIRCC     0x40 -- окружность, заданная радиусом
 
-RubberViewer<MyViewer> V(plane); // создать вьюер с резиной на основе MyViewer
-V.rubber_add(pt1,pt2,flags);     // добавить сегмент резиновой линии
-V.rubber_add(x1,y1,x2,y2,flags); // или так
-V.rubber_clear();                // очистить всю резину
+RUBBFL_DRAWN    0x100 -- сегмент нарисован
 
-Здесь pt1 и pt2 -- координаты концов, а r1 и r2 -- флаги привязки
+При создании объекту класса Rubber дается ссылка на Viewer:
 
-V.rubber_add_src_sq(p,size); // нарисовать квадратик 2size x 2size в точке плоскости p
-V.rubber_add_dst_sq(size);   // нарисовать квадратик 2size x 2size привязанный к мыши
-V.rubber_add_diag(p);        // линия от точки p до мыши
-V.rubber_add_rect(p);        // прямоугольник от точки p до мыши
-V.rubber_add_ellipse(p);     // эллипс, вписанный в прямоугольник от точки p до мыши
+    Rubber(Viewer * v)
+
+Добавление сегмента:
+  void add(rs);
+  void add(p1, p2, flags);
+  void add(x1, y1, x2, y2, flags);
+
+  rs = pop();  // удалить последний сегмент и вернуть его
+  rs = get();  // получить последний сегмент
+
+  clear();      // удалить все сегменты
+  dump();       // вывести все сегменты на stderr
+  i = size();   // получить количество сегментов
+
+Модификация координат, привязанных к объекту:
+  Rubber & operator/= (double k);
+  Rubber & operator*= (double k);
+
+Высокоуровневые функции для добавления сегментов:
+  add_src_sq(p, size);
+  add_dst_sq(size);
+  add_diag(p);
+  add_rect(p);
+  add_ell(p);
+  add_ellc(p);
+  add_circ(p);
+  add_circc(p);
 
 ===========================================================================
-    5. Вьюер с действиями (ActionViewer<ViewerT>)
+
+    4. ActionManager -- action_manager.h
+
+Добавление "действий" к объекту типа Viewer.
+
+===========================================================================
+    4. Вьюер с действиями (ActionViewer<ViewerT>)
 
 В файле action.h описан интерфейс объекта-действия:
 
@@ -184,7 +268,7 @@ GObjInfo -- информация о привязке и масштабе. Объ
 определенной области. Формат данных в кэше - на усмотрение объекта: это может
 быть набор точек для рисования линии или преобразованная растровая картинка.
 
-Объект может отдавать "сложность" кэширования и рисования. 
+Объект может отдавать "сложность" кэширования и рисования.
 Это хочется применять для умного разбиения плоскости на плитки в зависимости от
 сложности рисования объектов на плитках. Полезность этого пока
 непонятна.
