gred: static cache in gobj_line; fix redrawing in simple_viewer

--- a/core/gred/README
+++ b/core/gred/README
@@ -221,6 +221,8 @@ RUBBFL_DRAWN    0x100 -- сегмент нарисован
   add_circ(p);
   add_circc(p);
 
+Несколько объектов типа Rubber хорошо уживаются на одном Viewer'е.
+
 ===========================================================================
 
     4. ActionManager -- action_manager.h
