--- a/vector/vmap3/Readme
+++ b/vector/vmap3/Readme
@@ -1,3 +1,47 @@
+	Хранение положения подписей отдельно от объектов.
+
+Проблема заключается в том, что в форматах, с которыми мы работаем,
+положение, наклон и другие параметры подписи неудобно хранить внутри
+объекта, к которому эта подпись привязана.
+
+Поэтому, для каждой подписи создается отдельный объект, который
+достаточно удобно редактировать, и который имеет некоторую связь с
+основным объектом. Раньше такая связь осуществлялась с помощью
+уникальных идентификаторов объектов, однако некоторое время назад от
+идентификаторов отказались и теперь работает слдующая схема. Для наших
+целей она кажется очень удобной.
+
+Объект подписи содержит следующую информацию
+- точка положения подписи
+- точка привязки подписи
+- наклон текста, выравнивание текста.
+
+При чтении векторной карты в формате fig или mp находится соответствие между
+объектами и подписями:
+
+1. Каждый объект берет по одной подписи с правильным текстом и с точкой
+   привязки не далее label_search_dist1 (1см в масштабе карты) от него.
+2. Каждый объект берет все остальные подписи с правильным текстом и с
+   точкой привязки или положением не далее label_search_dist2 (1см) от него.
+3. Каждый объект берет все подписи, с точкой привязки не далее
+   label_search_dist3 (0.1см) от него.
+4. Невостребованные подписи теряются.
+
+Считается что label_search_dist2 существенно больше label_search_dist3, так что
+для того, чтобы не потерять подпись, надо либо двигать, либо
+переименовывать объект, но не делать это одновременно.
+
+Подписи, имеющие наклон 0 считаются горизонтальными, их наклон не
+пересчитывается при изменении системы координат.
+
+Для объектов, которые имеют название, но не получили подписи,
+создаются новые подписи.
+
+Подпись во внутреннем представлении (уже привязанная к объекту), не
+содержит точку привязки и текст. При записи точка привязки выставляется равной
+ближайшей точке объекта, а текст - равным названию объекта.
+
+**********************************************************************
 mp2png
 
 Получение растровой картинки из mp.
