vector/vmap3: rewrite option handling in vmap_copy

--- a/vector/vmap3/Readme
+++ b/vector/vmap3/Readme
@@ -1,3 +1,4 @@
+**********************************************************************
 	Хранение положения подписей отдельно от объектов.
 
 Проблема заключается в том, что в форматах, с которыми мы работаем,
@@ -42,7 +43,50 @@
 ближайшей точке объекта, а текст - равным названию объекта.
 
 **********************************************************************
-mp2png
+
+    Обновление fig-файла с подписями из mp-файла без подписей
+
+# vmap_copy map.mp map.fig --skip_all -o map.fig
+
+Неочевидность: параметры карты (style, name и т.д.) выставляются
+по последнему входному файлу, так что порядок входных файлов тут может быть
+важен.
+
+**********************************************************************
+
+	Источники объектов
+
+Иногда бывает удобно разделить объекты на некоторые категории. Для
+этой цели у объектов есть параметр source.
+
+1. Задача: есть два стыкующихся листа карты. Хочется собрать их в один,
+подвигать вручную объекты для лучшего совпадения и разделить обратно на листы.
+
+# vmap_copy --set_source_from_fname n37-001-{1,2,3,4}.fig -o n37-001.fig
+
+<редактируем>
+
+# for n in 1 2 3 4; do
+#   name="n37-001-$n.fig"
+#   vmap_copy n37-001.fig \
+#     -o "$name" --select_source "$name" --set_source ""
+# done
+
+(здесь выбор источника лучше делать не при чтении, а при записи,
+чтоб все подписи правильно привязались перед этим)
+
+2. Задача: обновлять некоторые объекты в карте из каталога cat.mp, без
+потери подписей.
+
+# vmap_copy  cat.mp --set_source "catalog"\
+             map.fig --skip_source "catalog"\
+             map.fig
+
+Неочевидность: параметры карты (style, name и т.д.) выставляются
+по последнему входному файлу, так что порядок входных файлов тут может быть
+важен.
+
+**********************************************************************
 
 Получение растровой картинки из mp.
 
