improve vmap_render

--- a/vector/vmap3/TODO
+++ b/vector/vmap3/TODO
@@ -1,17 +1,13 @@
 POI 0x6508 0 водопад
 POI 0x650E 3 порог
 
-POLYGON 0x4D 0 ледник
 POLYGON 0x19 0 крутой склон
 POLYGON 0xA 0 дырка в srtm данных
 
 POLYLINE 0x0 4 кривая надпись
-POLYLINE 0x19 143 забор
-POLYLINE 0x1E 16 нижний край обрыва
 
 TODO:
  - возможность задавать масштаб, границы, осевой меридиан и т.п.
  - контуры водоемов
- - стрелки на ЛЭП и газопроводах
  - подумать про вращающиеся объекты (пороги/водопады/станции/перевалы)
- - подумать про подписи
+ - стиль hr!
