vector/vmap3: build from global SConstruct

--- a/vector/vmap3/TODO
+++ b/vector/vmap3/TODO
@@ -1,6 +1,3 @@
-POI 0x6508 0 водопад
-POI 0x650E 3 порог
-
 POLYGON 0x19 0 крутой склон
 POLYGON 0xA 0 дырка в srtm данных
 
@@ -9,4 +6,6 @@ POLYLINE 0x0 4 кривая надпись
 TODO:
  - возможность задавать масштаб, границы, осевой меридиан и т.п.
  - контуры водоемов
+ - более аккуратные болота
+ - равномерная закраска ледника?
  - стиль hr!
