utf-8 в vmap3/Readme

--- a/vector/vmap3/Readme
+++ b/vector/vmap3/Readme
@@ -1,70 +1,70 @@
 **********************************************************************
-	Хранение положения подписей отдельно от объектов.
+	п╔я─п╟п╫п╣п╫п╦п╣ п©п╬п╩п╬п╤п╣п╫п╦я▐ п©п╬п╢п©п╦я│п╣п╧ п╬я┌п╢п╣п╩я▄п╫п╬ п╬я┌ п╬п╠я┼п╣п╨я┌п╬п╡.
 
-Проблема заключается в том, что в форматах, с которыми мы работаем,
-положение, наклон и другие параметры подписи неудобно хранить внутри
-объекта, к которому эта подпись привязана.
+п÷я─п╬п╠п╩п╣п╪п╟ п╥п╟п╨п╩я▌я┤п╟п╣я┌я│я▐ п╡ я┌п╬п╪, я┤я┌п╬ п╡ я└п╬я─п╪п╟я┌п╟я┘, я│ п╨п╬я┌п╬я─я▀п╪п╦ п╪я▀ я─п╟п╠п╬я┌п╟п╣п╪,
+п©п╬п╩п╬п╤п╣п╫п╦п╣, п╫п╟п╨п╩п╬п╫ п╦ п╢я─я┐пЁп╦п╣ п©п╟я─п╟п╪п╣я┌я─я▀ п©п╬п╢п©п╦я│п╦ п╫п╣я┐п╢п╬п╠п╫п╬ я┘я─п╟п╫п╦я┌я▄ п╡п╫я┐я┌я─п╦
+п╬п╠я┼п╣п╨я┌п╟, п╨ п╨п╬я┌п╬я─п╬п╪я┐ я█я┌п╟ п©п╬п╢п©п╦я│я▄ п©я─п╦п╡я▐п╥п╟п╫п╟.
 
-Поэтому, для каждой подписи создается отдельный объект, который
-достаточно удобно редактировать, и который имеет некоторую связь с
-основным объектом. Раньше такая связь осуществлялась с помощью
-уникальных идентификаторов объектов, однако некоторое время назад от
-идентификаторов отказались и теперь работает слдующая схема. Для наших
-целей она кажется очень удобной.
+п÷п╬я█я┌п╬п╪я┐, п╢п╩я▐ п╨п╟п╤п╢п╬п╧ п©п╬п╢п©п╦я│п╦ я│п╬п╥п╢п╟п╣я┌я│я▐ п╬я┌п╢п╣п╩я▄п╫я▀п╧ п╬п╠я┼п╣п╨я┌, п╨п╬я┌п╬я─я▀п╧
+п╢п╬я│я┌п╟я┌п╬я┤п╫п╬ я┐п╢п╬п╠п╫п╬ я─п╣п╢п╟п╨я┌п╦я─п╬п╡п╟я┌я▄, п╦ п╨п╬я┌п╬я─я▀п╧ п╦п╪п╣п╣я┌ п╫п╣п╨п╬я┌п╬я─я┐я▌ я│п╡я▐п╥я▄ я│
+п╬я│п╫п╬п╡п╫я▀п╪ п╬п╠я┼п╣п╨я┌п╬п╪. п═п╟п╫я▄я┬п╣ я┌п╟п╨п╟я▐ я│п╡я▐п╥я▄ п╬я│я┐я┴п╣я│я┌п╡п╩я▐п╩п╟я│я▄ я│ п©п╬п╪п╬я┴я▄я▌
+я┐п╫п╦п╨п╟п╩я▄п╫я▀я┘ п╦п╢п╣п╫я┌п╦я└п╦п╨п╟я┌п╬я─п╬п╡ п╬п╠я┼п╣п╨я┌п╬п╡, п╬п╢п╫п╟п╨п╬ п╫п╣п╨п╬я┌п╬я─п╬п╣ п╡я─п╣п╪я▐ п╫п╟п╥п╟п╢ п╬я┌
+п╦п╢п╣п╫я┌п╦я└п╦п╨п╟я┌п╬я─п╬п╡ п╬я┌п╨п╟п╥п╟п╩п╦я│я▄ п╦ я┌п╣п©п╣я─я▄ я─п╟п╠п╬я┌п╟п╣я┌ я│п╩п╢я┐я▌я┴п╟я▐ я│я┘п╣п╪п╟. п■п╩я▐ п╫п╟я┬п╦я┘
+я├п╣п╩п╣п╧ п╬п╫п╟ п╨п╟п╤п╣я┌я│я▐ п╬я┤п╣п╫я▄ я┐п╢п╬п╠п╫п╬п╧.
 
-Объект подписи содержит следующую информацию
-- точка положения подписи
-- точка привязки подписи
-- наклон текста, выравнивание текста.
+п·п╠я┼п╣п╨я┌ п©п╬п╢п©п╦я│п╦ я│п╬п╢п╣я─п╤п╦я┌ я│п╩п╣п╢я┐я▌я┴я┐я▌ п╦п╫я└п╬я─п╪п╟я├п╦я▌
+- я┌п╬я┤п╨п╟ п©п╬п╩п╬п╤п╣п╫п╦я▐ п©п╬п╢п©п╦я│п╦
+- я┌п╬я┤п╨п╟ п©я─п╦п╡я▐п╥п╨п╦ п©п╬п╢п©п╦я│п╦
+- п╫п╟п╨п╩п╬п╫ я┌п╣п╨я│я┌п╟, п╡я▀я─п╟п╡п╫п╦п╡п╟п╫п╦п╣ я┌п╣п╨я│я┌п╟.
 
-При чтении векторной карты в формате fig или mp находится соответствие между
-объектами и подписями:
+п÷я─п╦ я┤я┌п╣п╫п╦п╦ п╡п╣п╨я┌п╬я─п╫п╬п╧ п╨п╟я─я┌я▀ п╡ я└п╬я─п╪п╟я┌п╣ fig п╦п╩п╦ mp п╫п╟я┘п╬п╢п╦я┌я│я▐ я│п╬п╬я┌п╡п╣я┌я│я┌п╡п╦п╣ п╪п╣п╤п╢я┐
+п╬п╠я┼п╣п╨я┌п╟п╪п╦ п╦ п©п╬п╢п©п╦я│я▐п╪п╦:
 
-1. Каждый объект берет по одной подписи с правильным текстом и с точкой
-   привязки не далее label_search_dist1 (1см в масштабе карты) от него.
-2. Каждый объект берет все остальные подписи с правильным текстом и с
-   точкой привязки или положением не далее label_search_dist2 (1см) от него.
-3. Каждый объект берет все подписи, с точкой привязки не далее
-   label_search_dist3 (0.1см) от него.
-4. Невостребованные подписи теряются.
+1. п п╟п╤п╢я▀п╧ п╬п╠я┼п╣п╨я┌ п╠п╣я─п╣я┌ п©п╬ п╬п╢п╫п╬п╧ п©п╬п╢п©п╦я│п╦ я│ п©я─п╟п╡п╦п╩я▄п╫я▀п╪ я┌п╣п╨я│я┌п╬п╪ п╦ я│ я┌п╬я┤п╨п╬п╧
+   п©я─п╦п╡я▐п╥п╨п╦ п╫п╣ п╢п╟п╩п╣п╣ label_search_dist1 (1я│п╪ п╡ п╪п╟я│я┬я┌п╟п╠п╣ п╨п╟я─я┌я▀) п╬я┌ п╫п╣пЁп╬.
+2. п п╟п╤п╢я▀п╧ п╬п╠я┼п╣п╨я┌ п╠п╣я─п╣я┌ п╡я│п╣ п╬я│я┌п╟п╩я▄п╫я▀п╣ п©п╬п╢п©п╦я│п╦ я│ п©я─п╟п╡п╦п╩я▄п╫я▀п╪ я┌п╣п╨я│я┌п╬п╪ п╦ я│
+   я┌п╬я┤п╨п╬п╧ п©я─п╦п╡я▐п╥п╨п╦ п╦п╩п╦ п©п╬п╩п╬п╤п╣п╫п╦п╣п╪ п╫п╣ п╢п╟п╩п╣п╣ label_search_dist2 (1я│п╪) п╬я┌ п╫п╣пЁп╬.
+3. п п╟п╤п╢я▀п╧ п╬п╠я┼п╣п╨я┌ п╠п╣я─п╣я┌ п╡я│п╣ п©п╬п╢п©п╦я│п╦, я│ я┌п╬я┤п╨п╬п╧ п©я─п╦п╡я▐п╥п╨п╦ п╫п╣ п╢п╟п╩п╣п╣
+   label_search_dist3 (0.1я│п╪) п╬я┌ п╫п╣пЁп╬.
+4. п²п╣п╡п╬я│я┌я─п╣п╠п╬п╡п╟п╫п╫я▀п╣ п©п╬п╢п©п╦я│п╦ я┌п╣я─я▐я▌я┌я│я▐.
 
-Считается что label_search_dist2 существенно больше label_search_dist3, так что
-для того, чтобы не потерять подпись, надо либо двигать, либо
-переименовывать объект, но не делать это одновременно.
+п║я┤п╦я┌п╟п╣я┌я│я▐ я┤я┌п╬ label_search_dist2 я│я┐я┴п╣я│я┌п╡п╣п╫п╫п╬ п╠п╬п╩я▄я┬п╣ label_search_dist3, я┌п╟п╨ я┤я┌п╬
+п╢п╩я▐ я┌п╬пЁп╬, я┤я┌п╬п╠я▀ п╫п╣ п©п╬я┌п╣я─я▐я┌я▄ п©п╬п╢п©п╦я│я▄, п╫п╟п╢п╬ п╩п╦п╠п╬ п╢п╡п╦пЁп╟я┌я▄, п╩п╦п╠п╬
+п©п╣я─п╣п╦п╪п╣п╫п╬п╡я▀п╡п╟я┌я▄ п╬п╠я┼п╣п╨я┌, п╫п╬ п╫п╣ п╢п╣п╩п╟я┌я▄ я█я┌п╬ п╬п╢п╫п╬п╡я─п╣п╪п╣п╫п╫п╬.
 
-Подписи, имеющие наклон 0 считаются горизонтальными, их наклон не
-пересчитывается при изменении системы координат.
+п÷п╬п╢п©п╦я│п╦, п╦п╪п╣я▌я┴п╦п╣ п╫п╟п╨п╩п╬п╫ 0 я│я┤п╦я┌п╟я▌я┌я│я▐ пЁп╬я─п╦п╥п╬п╫я┌п╟п╩я▄п╫я▀п╪п╦, п╦я┘ п╫п╟п╨п╩п╬п╫ п╫п╣
+п©п╣я─п╣я│я┤п╦я┌я▀п╡п╟п╣я┌я│я▐ п©я─п╦ п╦п╥п╪п╣п╫п╣п╫п╦п╦ я│п╦я│я┌п╣п╪я▀ п╨п╬п╬я─п╢п╦п╫п╟я┌.
 
-Для объектов, которые имеют название, но не получили подписи,
-создаются новые подписи.
+п■п╩я▐ п╬п╠я┼п╣п╨я┌п╬п╡, п╨п╬я┌п╬я─я▀п╣ п╦п╪п╣я▌я┌ п╫п╟п╥п╡п╟п╫п╦п╣, п╫п╬ п╫п╣ п©п╬п╩я┐я┤п╦п╩п╦ п©п╬п╢п©п╦я│п╦,
+я│п╬п╥п╢п╟я▌я┌я│я▐ п╫п╬п╡я▀п╣ п©п╬п╢п©п╦я│п╦.
 
-Подпись во внутреннем представлении (уже привязанная к объекту), не
-содержит точку привязки и текст. При записи точка привязки выставляется равной
-ближайшей точке объекта, а текст - равным названию объекта.
+п÷п╬п╢п©п╦я│я▄ п╡п╬ п╡п╫я┐я┌я─п╣п╫п╫п╣п╪ п©я─п╣п╢я│я┌п╟п╡п╩п╣п╫п╦п╦ (я┐п╤п╣ п©я─п╦п╡я▐п╥п╟п╫п╫п╟я▐ п╨ п╬п╠я┼п╣п╨я┌я┐), п╫п╣
+я│п╬п╢п╣я─п╤п╦я┌ я┌п╬я┤п╨я┐ п©я─п╦п╡я▐п╥п╨п╦ п╦ я┌п╣п╨я│я┌. п÷я─п╦ п╥п╟п©п╦я│п╦ я┌п╬я┤п╨п╟ п©я─п╦п╡я▐п╥п╨п╦ п╡я▀я│я┌п╟п╡п╩я▐п╣я┌я│я▐ я─п╟п╡п╫п╬п╧
+п╠п╩п╦п╤п╟п╧я┬п╣п╧ я┌п╬я┤п╨п╣ п╬п╠я┼п╣п╨я┌п╟, п╟ я┌п╣п╨я│я┌ - я─п╟п╡п╫я▀п╪ п╫п╟п╥п╡п╟п╫п╦я▌ п╬п╠я┼п╣п╨я┌п╟.
 
 **********************************************************************
 
-    Обновление fig-файла с подписями из mp-файла без подписей
+    п·п╠п╫п╬п╡п╩п╣п╫п╦п╣ fig-я└п╟п╧п╩п╟ я│ п©п╬п╢п©п╦я│я▐п╪п╦ п╦п╥ mp-я└п╟п╧п╩п╟ п╠п╣п╥ п©п╬п╢п©п╦я│п╣п╧
 
 # vmap_copy map.mp map.fig --skip_all -o map.fig
 
-Неочевидность: параметры карты (style, name и т.д.) выставляются
-по последнему входному файлу, так что порядок входных файлов тут может быть
-важен.
+п²п╣п╬я┤п╣п╡п╦п╢п╫п╬я│я┌я▄: п©п╟я─п╟п╪п╣я┌я─я▀ п╨п╟я─я┌я▀ (style, name п╦ я┌.п╢.) п╡я▀я│я┌п╟п╡п╩я▐я▌я┌я│я▐
+п©п╬ п©п╬я│п╩п╣п╢п╫п╣п╪я┐ п╡я┘п╬п╢п╫п╬п╪я┐ я└п╟п╧п╩я┐, я┌п╟п╨ я┤я┌п╬ п©п╬я─я▐п╢п╬п╨ п╡я┘п╬п╢п╫я▀я┘ я└п╟п╧п╩п╬п╡ я┌я┐я┌ п╪п╬п╤п╣я┌ п╠я▀я┌я▄
+п╡п╟п╤п╣п╫.
 
 **********************************************************************
 
-	Источники объектов
+	п≤я│я┌п╬я┤п╫п╦п╨п╦ п╬п╠я┼п╣п╨я┌п╬п╡
 
-Иногда бывает удобно разделить объекты на некоторые категории. Для
-этой цели у объектов есть параметр source.
+п≤п╫п╬пЁп╢п╟ п╠я▀п╡п╟п╣я┌ я┐п╢п╬п╠п╫п╬ я─п╟п╥п╢п╣п╩п╦я┌я▄ п╬п╠я┼п╣п╨я┌я▀ п╫п╟ п╫п╣п╨п╬я┌п╬я─я▀п╣ п╨п╟я┌п╣пЁп╬я─п╦п╦. п■п╩я▐
+я█я┌п╬п╧ я├п╣п╩п╦ я┐ п╬п╠я┼п╣п╨я┌п╬п╡ п╣я│я┌я▄ п©п╟я─п╟п╪п╣я┌я─ source.
 
-1. Задача: есть два стыкующихся листа карты. Хочется собрать их в один,
-подвигать вручную объекты для лучшего совпадения и разделить обратно на листы.
+1. п≈п╟п╢п╟я┤п╟: п╣я│я┌я▄ п╢п╡п╟ я│я┌я▀п╨я┐я▌я┴п╦я┘я│я▐ п╩п╦я│я┌п╟ п╨п╟я─я┌я▀. п╔п╬я┤п╣я┌я│я▐ я│п╬п╠я─п╟я┌я▄ п╦я┘ п╡ п╬п╢п╦п╫,
+п©п╬п╢п╡п╦пЁп╟я┌я▄ п╡я─я┐я┤п╫я┐я▌ п╬п╠я┼п╣п╨я┌я▀ п╢п╩я▐ п╩я┐я┤я┬п╣пЁп╬ я│п╬п╡п©п╟п╢п╣п╫п╦я▐ п╦ я─п╟п╥п╢п╣п╩п╦я┌я▄ п╬п╠я─п╟я┌п╫п╬ п╫п╟ п╩п╦я│я┌я▀.
 
 # vmap_copy --set_source_from_fname n37-001-{1,2,3,4}.fig -o n37-001.fig
 
-<редактируем>
+<я─п╣п╢п╟п╨я┌п╦я─я┐п╣п╪>
 
 # for n in 1 2 3 4; do
 #   name="n37-001-$n.fig"
@@ -72,77 +72,77 @@
 #     -o "$name" --select_source "$name" --set_source ""
 # done
 
-(здесь выбор источника лучше делать не при чтении, а при записи,
-чтоб все подписи правильно привязались перед этим)
+(п╥п╢п╣я│я▄ п╡я▀п╠п╬я─ п╦я│я┌п╬я┤п╫п╦п╨п╟ п╩я┐я┤я┬п╣ п╢п╣п╩п╟я┌я▄ п╫п╣ п©я─п╦ я┤я┌п╣п╫п╦п╦, п╟ п©я─п╦ п╥п╟п©п╦я│п╦,
+я┤я┌п╬п╠ п╡я│п╣ п©п╬п╢п©п╦я│п╦ п©я─п╟п╡п╦п╩я▄п╫п╬ п©я─п╦п╡я▐п╥п╟п╩п╦я│я▄ п©п╣я─п╣п╢ я█я┌п╦п╪)
 
-2. Задача: обновлять некоторые объекты в карте из каталога cat.mp, без
-потери подписей.
+2. п≈п╟п╢п╟я┤п╟: п╬п╠п╫п╬п╡п╩я▐я┌я▄ п╫п╣п╨п╬я┌п╬я─я▀п╣ п╬п╠я┼п╣п╨я┌я▀ п╡ п╨п╟я─я┌п╣ п╦п╥ п╨п╟я┌п╟п╩п╬пЁп╟ cat.mp, п╠п╣п╥
+п©п╬я┌п╣я─п╦ п©п╬п╢п©п╦я│п╣п╧.
 
 # vmap_copy  cat.mp --set_source "catalog"\
              map.fig --skip_source "catalog"\
              map.fig
 
-Неочевидность: параметры карты (style, name и т.д.) выставляются
-по последнему входному файлу, так что порядок входных файлов тут может быть
-важен.
+п²п╣п╬я┤п╣п╡п╦п╢п╫п╬я│я┌я▄: п©п╟я─п╟п╪п╣я┌я─я▀ п╨п╟я─я┌я▀ (style, name п╦ я┌.п╢.) п╡я▀я│я┌п╟п╡п╩я▐я▌я┌я│я▐
+п©п╬ п©п╬я│п╩п╣п╢п╫п╣п╪я┐ п╡я┘п╬п╢п╫п╬п╪я┐ я└п╟п╧п╩я┐, я┌п╟п╨ я┤я┌п╬ п©п╬я─я▐п╢п╬п╨ п╡я┘п╬п╢п╫я▀я┘ я└п╟п╧п╩п╬п╡ я┌я┐я┌ п╪п╬п╤п╣я┌ п╠я▀я┌я▄
+п╡п╟п╤п╣п╫.
 
 **********************************************************************
 
-Получение растровой картинки из mp.
+п÷п╬п╩я┐я┤п╣п╫п╦п╣ я─п╟я│я┌я─п╬п╡п╬п╧ п╨п╟я─я┌п╦п╫п╨п╦ п╦п╥ mp.
 
-    1. Масштаб, разрешение, диапазон координат
+    1. п°п╟я│я┬я┌п╟п╠, я─п╟п╥я─п╣я┬п╣п╫п╦п╣, п╢п╦п╟п©п╟п╥п╬п╫ п╨п╬п╬я─п╢п╦п╫п╟я┌
 
-Пока жестко заданы:
-- масштаб 1:50000
-- разрешение 200dpi
-- диапазон координат - по габаритам всех объектов в файле
-- СК Пулково-42
-- проекция Гаусса-Крюгера
-- осевой меридиан - по середине диапазона координат
+п÷п╬п╨п╟ п╤п╣я│я┌п╨п╬ п╥п╟п╢п╟п╫я▀:
+- п╪п╟я│я┬я┌п╟п╠ 1:50000
+- я─п╟п╥я─п╣я┬п╣п╫п╦п╣ 200dpi
+- п╢п╦п╟п©п╟п╥п╬п╫ п╨п╬п╬я─п╢п╦п╫п╟я┌ - п©п╬ пЁп╟п╠п╟я─п╦я┌п╟п╪ п╡я│п╣я┘ п╬п╠я┼п╣п╨я┌п╬п╡ п╡ я└п╟п╧п╩п╣
+- п║п  п÷я┐п╩п╨п╬п╡п╬-42
+- п©я─п╬п╣п╨я├п╦я▐ п⌠п╟я┐я│я│п╟-п я─я▌пЁп╣я─п╟
+- п╬я│п╣п╡п╬п╧ п╪п╣я─п╦п╢п╦п╟п╫ - п©п╬ я│п╣я─п╣п╢п╦п╫п╣ п╢п╦п╟п©п╟п╥п╬п╫п╟ п╨п╬п╬я─п╢п╦п╫п╟я┌
 
-    2. Привязка
+    2. п÷я─п╦п╡я▐п╥п╨п╟
 
-Пока нет...
+п÷п╬п╨п╟ п╫п╣я┌...
 
-    3. Картографические объекты
+    3. п п╟я─я┌п╬пЁя─п╟я└п╦я┤п╣я│п╨п╦п╣ п╬п╠я┼п╣п╨я┌я▀
 
-Растительность:
-- Вся картинка закашивается белым.
-- Рисуются леса (0x16) - светло-зеленые (0xAAFFAA) многоугольники.
-- Рисуются поля (0x52) - белые многоугольники.
-- Рисуются вырубки (0x4f, 0x50) и редколесье (0x14).
-  Картинки со штриховкой берутся из png-файлов.
-- Рисуются острова леса (0x15).
-- На границу леса (светло-зеленого) и поля (белое) носятся контуры леса.
-- Рисуются нарисованные вручную контуры леса (0x23)
+п═п╟я│я┌п╦я┌п╣п╩я▄п╫п╬я│я┌я▄:
+- п▓я│я▐ п╨п╟я─я┌п╦п╫п╨п╟ п╥п╟п╨п╟я┬п╦п╡п╟п╣я┌я│я▐ п╠п╣п╩я▀п╪.
+- п═п╦я│я┐я▌я┌я│я▐ п╩п╣я│п╟ (0x16) - я│п╡п╣я┌п╩п╬-п╥п╣п╩п╣п╫я▀п╣ (0xAAFFAA) п╪п╫п╬пЁп╬я┐пЁп╬п╩я▄п╫п╦п╨п╦.
+- п═п╦я│я┐я▌я┌я│я▐ п©п╬п╩я▐ (0x52) - п╠п╣п╩я▀п╣ п╪п╫п╬пЁп╬я┐пЁп╬п╩я▄п╫п╦п╨п╦.
+- п═п╦я│я┐я▌я┌я│я▐ п╡я▀я─я┐п╠п╨п╦ (0x4f, 0x50) п╦ я─п╣п╢п╨п╬п╩п╣я│я▄п╣ (0x14).
+  п п╟я─я┌п╦п╫п╨п╦ я│п╬ я┬я┌я─п╦я┘п╬п╡п╨п╬п╧ п╠п╣я─я┐я┌я│я▐ п╦п╥ png-я└п╟п╧п╩п╬п╡.
+- п═п╦я│я┐я▌я┌я│я▐ п╬я│я┌я─п╬п╡п╟ п╩п╣я│п╟ (0x15).
+- п²п╟ пЁя─п╟п╫п╦я├я┐ п╩п╣я│п╟ (я│п╡п╣я┌п╩п╬-п╥п╣п╩п╣п╫п╬пЁп╬) п╦ п©п╬п╩я▐ (п╠п╣п╩п╬п╣) п╫п╬я│я▐я┌я│я▐ п╨п╬п╫я┌я┐я─я▀ п╩п╣я│п╟.
+- п═п╦я│я┐я▌я┌я│я▐ п╫п╟я─п╦я│п╬п╡п╟п╫п╫я▀п╣ п╡я─я┐я┤п╫я┐я▌ п╨п╬п╫я┌я┐я─я▀ п╩п╣я│п╟ (0x23)
 
-Поиск контуров производится по растру, из-за этого все сделано
-немного хитрее, чем написано.
+п÷п╬п╦я│п╨ п╨п╬п╫я┌я┐я─п╬п╡ п©я─п╬п╦п╥п╡п╬п╢п╦я┌я│я▐ п©п╬ я─п╟я│я┌я─я┐, п╦п╥-п╥п╟ я█я┌п╬пЁп╬ п╡я│п╣ я│п╢п╣п╩п╟п╫п╬
+п╫п╣п╪п╫п╬пЁп╬ я┘п╦я┌я─п╣п╣, я┤п╣п╪ п╫п╟п©п╦я│п╟п╫п╬.
 
-Населенка:
-- закрытые территории (0x4)
-- деревни (0xE)
-- города (0x1)
-- дачи (0x4E)
-- кладбища (0x1A). В середине каждого многоугольника ставится крестик. Так что
-  не следует рисовать сильно невыпуклые многоугольники...
+п²п╟я│п╣п╩п╣п╫п╨п╟:
+- п╥п╟п╨я─я▀я┌я▀п╣ я┌п╣я─я─п╦я┌п╬я─п╦п╦ (0x4)
+- п╢п╣я─п╣п╡п╫п╦ (0xE)
+- пЁп╬я─п╬п╢п╟ (0x1)
+- п╢п╟я┤п╦ (0x4E)
+- п╨п╩п╟п╢п╠п╦я┴п╟ (0x1A). п▓ я│п╣я─п╣п╢п╦п╫п╣ п╨п╟п╤п╢п╬пЁп╬ п╪п╫п╬пЁп╬я┐пЁп╬п╩я▄п╫п╦п╨п╟ я│я┌п╟п╡п╦я┌я│я▐ п╨я─п╣я│я┌п╦п╨. п╒п╟п╨ я┤я┌п╬
+  п╫п╣ я│п╩п╣п╢я┐п╣я┌ я─п╦я│п╬п╡п╟я┌я▄ я│п╦п╩я▄п╫п╬ п╫п╣п╡я▀п©я┐п╨п╩я▀п╣ п╪п╫п╬пЁп╬я┐пЁп╬п╩я▄п╫п╦п╨п╦...
 
-Контуры населенки - черные линии толщиной 0.5
+п п╬п╫я┌я┐я─я▀ п╫п╟я│п╣п╩п╣п╫п╨п╦ - я┤п╣я─п╫я▀п╣ п╩п╦п╫п╦п╦ я┌п╬п╩я┴п╦п╫п╬п╧ 0.5
 
-Горизонтали:
-- пунктирные (0x20)
-- сплошные (0x21)
-- жирные (0x22)
+п⌠п╬я─п╦п╥п╬п╫я┌п╟п╩п╦:
+- п©я┐п╫п╨я┌п╦я─п╫я▀п╣ (0x20)
+- я│п©п╩п╬я┬п╫я▀п╣ (0x21)
+- п╤п╦я─п╫я▀п╣ (0x22)
 
-Хорошие/плохие пути:
+п╔п╬я─п╬я┬п╦п╣/п©п╩п╬я┘п╦п╣ п©я┐я┌п╦:
 - 2 (0x32)
 - 3 (0x33)
 - 4 (0x34)
 - 5 (0x35)
 
-Болота
-- заболоченность (0x51) 
-- болото (0x4C)
-- старый знак - линия (0x24)
+п▒п╬п╩п╬я┌п╟
+- п╥п╟п╠п╬п╩п╬я┤п╣п╫п╫п╬я│я┌я▄ (0x51) 
+- п╠п╬п╩п╬я┌п╬ (0x4C)
+- я│я┌п╟я─я▀п╧ п╥п╫п╟п╨ - п╩п╦п╫п╦я▐ (0x24)
 
-Реки
+п═п╣п╨п╦
