vector/vmap3: update Readme

--- a/vector/vmap3/Readme
+++ b/vector/vmap3/Readme
@@ -88,21 +88,31 @@
 
 **********************************************************************
 
+	Изготовление пустой карты
+
+vmap_copy -o file.fig --range_nom n37 --rscale 1000000 --set_brd_from_range
+
+vmap_copy -o file.fig --range_datum pulkovo --range_proj tmerc\
+  --range 100000x100000+7500000+6200000 --set_brd_from_range
+
+При этих операциях всегда возникает граница. Если она не нужна, ее
+можно удалить отдельной командой:
+
+vmap_copy file.fig -o file.fig --set_brd ""
+
+
+**********************************************************************
+
 Получение растровой картинки из mp.
 
     1. Масштаб, разрешение, диапазон координат
 
 Пока жестко заданы:
-- масштаб 1:50000
-- разрешение 200dpi
-- диапазон координат - по габаритам всех объектов в файле
 - СК Пулково-42
 - проекция Гаусса-Крюгера
 - осевой меридиан - по середине диапазона координат
 
     2. Привязка
-
-Пока нет...
 
     3. Картографические объекты
 
