vmap: update Readme

--- a/vector/vmap3/Readme
+++ b/vector/vmap3/Readme
@@ -3,22 +3,31 @@
 
 Проблема заключается в том, что в форматах, с которыми мы работаем,
 положение, наклон и другие параметры подписи неудобно хранить внутри
-объекта, к которому эта подпись привязана.
+объекта, к которому эта подпись привязана, а удобно создать и
+редактировать отдельный объект с подписью, который будет иметь
+некоторую связь с основным объектом.
 
-Поэтому, для каждой подписи создается отдельный объект, который
-достаточно удобно редактировать, и который имеет некоторую связь с
-основным объектом. Раньше такая связь осуществлялась с помощью
+Раньше связь между объектом и подписью осуществлялась с помощью
 уникальных идентификаторов объектов, однако некоторое время назад от
-идентификаторов отказались и теперь работает слдующая схема. Для наших
-целей она кажется очень удобной.
+идентификаторов отказались и теперь работает следующая схема,
+оказавшаяся гораздо более удобной:
 
-Объект подписи содержит следующую информацию
+Объект-подпись содержит следующую информацию
 - точка положения подписи
 - точка привязки подписи
 - наклон текста, выравнивание текста.
+- текст подписи.
 
-При чтении векторной карты в формате fig или mp находится соответствие между
-объектами и подписями:
+При чтении векторных карт подписи сохраняются в отдельный буфер.
+Исключение составляет формат vmap, в котором могут хранится и
+отдельные подписи, и подписи уже привязанные к объектам. Они читаются
+в том виде, как записаны в файл. Если при чтении формата vmap все-таки
+нужно отделить подписи от объектов - используйте параметр split_labels.
+
+После чтения карт с объектами и подписями могут производиться какие-то
+действия по отдельности, а после - подписи привязываются к объектам.
+
+Привязка подписей к объектам осуществляется следующим образом:
 
 1. Каждый объект берет по одной подписи с правильным текстом и с точкой
    привязки не далее label_search_dist1 (1см в масштабе карты) от него.
@@ -38,19 +47,29 @@
 Для объектов, которые имеют название, но не получили подписи,
 создаются новые подписи.
 
-Подпись во внутреннем представлении (уже привязанная к объекту), не
-содержит точку привязки и текст. При записи точка привязки выставляется равной
-ближайшей точке объекта, а текст - равным названию объекта.
+Подписи, привязанные к объекту, не содержат точку привязки и текст. При
+записи точка привязки выставляется равной ближайшей точке объекта, а
+текст - равным названию объекта.
+
+Если при привязке подписи к объекту их названия различается -
+обычно объект не меняет своего название. Вероятно, при чтении формата
+ocad будет, наоборот, название объекта выставляться по подписи.
 
 **********************************************************************
 
     Обновление fig-файла с подписями из mp-файла без подписей
 
-# vmap_copy map.mp map.fig --skip_all -o map.fig
+# vmap_copy map.mp --skip_labels  map.fig --skip_all -o map.fig
 
 Неочевидность: параметры карты (style, name и т.д.) выставляются
 по последнему входному файлу, так что порядок входных файлов тут может быть
 важен.
+
+А вот с vmap такое не сработает, так как в нем подписи обычно привязаны к
+объектам. Нужно говорить так:
+
+# vmap_copy map.mp --skip_labels\
+            map.vmap --split_labels --skip_all -o map.fig
 
 **********************************************************************
 
