--- a/vector/vmap3/styles/Readme
+++ b/vector/vmap3/styles/Readme
@@ -1,9 +1,11 @@
-              time,s  mem,kB  contours, antial.
+new (w/o additional surfaces)
+              time,s  mem,kB  contours, antialiasing
 LABEL_STYLE0  33.22   429632
-              15.21   528704  A
-              16.76   531088  A+C
-LABEL_STYLE1  15.78   528704  A
-LABEL_STYLE2  16.12   528704  A
-              34.14   429648
-LABEL_STYLE3  17.34   805984  A
-              19.37   808352  A+C
+              15.21   528704 A
+              16.93   531024 A + C
+LABEL_STYLE1  17.57   531008 A + C
+LABEL_STYLE2  19.62   531024 A + C
+
+
+
+
