geo_io: fix data_marg option

--- a/programs/mapsoft_convert.1
+++ b/programs/mapsoft_convert.1
@@ -129,7 +129,7 @@ Note: rscale value overwrites scale.
 
 .TP 
 \fB\-\-data_marg=<m>\fR
-When detecting geometry of geodata ddd margings around it (in meters).
+When detecting geometry of geodata add margings around it (in pixels).
 
 .TP 
 \fB\-\-draw_borders=(1|0)\fR
